--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 //Подключение удаленного репозитория
-repositories{
+repositories {
     mavenCentral()
 }
 
@@ -13,4 +13,14 @@ dependencies {
     compile 'com.beust:jcommander:1.48'
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.google.code.gson:gson:2.6.1'
+}
+
+//запуск тестов через КС
+tasK testGroups(type: Test) {
+    useTestNG()
+    suites 'src/test/resources/testng-groups.xml'
+}
+tasK testContacts(type: Test) {
+    useTestNG()
+    suites 'src/test/resources/testng-contacts.xml'
 }
