--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,7 +13,9 @@ dependencies {
     compile 'com.beust:jcommander:1.48'
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.google.code.gson:gson:2.6.1'
-}
+    compile 'ch.qos.logback:logback-classic:1.1.5'
+
+    }
 
 task testContacts(type: Test) {
     useTestNG() {
