Отключаемые проверки UI(контакты+группы)

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -28,7 +28,9 @@ task testContacts(type: Test) {
     if(project.hasProperty('target')){
         systemProperty 'target',"${target}"
     }
-
+    if(project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI',"${verifyUI}"
+    }
 }
 //запуск тестов через КС
 task testGroups(type: Test) {
@@ -40,6 +42,9 @@ task testGroups(type: Test) {
     }
     if(project.hasProperty('target')){
         systemProperty 'target',"${target}"
+    }
+    if(project.hasProperty('verifyUI')){
+        systemProperty 'verifyUI',"${verifyUI}"
     }
 }
 
