--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -7,11 +7,13 @@ repositories {
 
 //Декларация зависимостей
 dependencies {
+    compile 'ch.qos.logback:logback-classic:1.1.5'
     compile 'org.testng:testng:6.14.3'
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'commons-net:commons-net:3.6'
-    
+    compile 'org.subethamail:subethasmtp:3.1.7'
+    compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
     }
 
 
